tests/errors/module-member-typo/main.pa
use core.list

def main = list.lenght
